--- a/css/index.css
+++ b/css/index.css
@@ -5,11 +5,160 @@
   padding: 0;
 }
 
+body {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 #container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+}
+
+#header {
+  background-color: #fcfcff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 20px 30px 20px;
+  border-bottom: 1px solid #f3f5f7;
+}
+
+#dateSection {
+  font-size: 28px;
+  color: #666afb;
+  font-weight: 600;
+  padding-bottom: 12px;
+}
+
+#date {
+  font-weight: 100;
+  color: #8a8dfc;
+}
+
+#month {
+  color: #b0b0be;
+  font-size: 16px;
+}
+
+#taskCount {
+  color: #b0b0be;
+  font-size: 16px;
+}
+
+#openModalBtn {
+  position: absolute;
+  top: 14%;
+  right: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: flex-end;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  background-color: #fb6a6b;
+  color: #fff;
+}
+
+#openModalBtn:hover {
+  box-shadow: 0px 0px 22px 2px #962323a6 inset;
+}
+
+#openModalBtn #addBtnImage {
+  transform: rotate(0deg);
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+#openModalBtn:hover #addBtnImage {
+  animation: rotation 0.5s linear;
+}
+
+#taskInputSection {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+#taskInputSection p {
+  font-family: "Akaya Kanadaka";
+  font-size: 2em;
+}
+
+#taskInput {
+  display: flex;
+}
+
+#allTaskController {
+  height: 48px;
+  display: flex;
+  align-items: center;
+  padding: 20px 20px 20px 30px;
+  border-bottom: 2px solid #f3f5f7;
+}
+
+#selectAll {
+  height: 18px;
+  width: 18px;
+  cursor: pointer;
+  position: relative;
+  appearance: none;
+  transition-duration: 0.3s;
+  border: 1px solid #fa6667;
+  border-radius: 2px;
+}
+
+#selectAll:checked {
+  background-color: blue;
+}
+
+#selectAll:checked::after {
+  content: "\2713";
+  background-color: #fb6c6d;
+  color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  height: 16px;
+  width: 16px;
+  text-align: center;
+  border: 1px solid #fb6c6d;
+  border-radius: 2px;
+}
+
+#selectAll + span {
+  padding-left: 8px;
+  margin-right: 30px;
+  font-size: 20px;
+  color: #ababbd;
+}
+
+#deleteAll {
+  padding: 6px;
+  border: none;
+  border-radius: 4px;
+  background-color: #fa6667;
+  color: #fff;
+  font-size: 14px;
 }
 
 /*
