--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap");
-
+:root {
+  --btn-bgColor: #f43839;
+  --btn-color: #fff;
+}
 * {
   margin: 0;
   padding: 0;
@@ -10,9 +13,64 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  width: 100vw;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+button {
+  cursor: pointer;
+}
+
+/*<------utility classes------->*/
+.show {
+  visibility: visible;
+}
+
+.hide {
+  visibility: hidden;
+}
+
+.blur {
+  opacity: 0.2;
+}
+
+/*<------utility classes------->*/
+/*<------global styling------->*/
+input[type="checkbox"] {
+  height: 18px;
+  width: 18px;
+  cursor: pointer;
+  position: relative;
+  appearance: none;
+  transition-duration: 0.3s;
+  border: 1px solid #fa6667;
+  border-radius: 2px;
+}
+
+input[type="checkbox"]:checked {
+  background-color: blue;
+}
+
+input[type="checkbox"]:checked::after {
+  content: "\2713";
+  background-color: #fb6c6d;
+  color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  height: 16px;
+  width: 16px;
+  text-align: center;
+  border: 1px solid #fb6c6d;
+  border-radius: 2px;
+}
+
+input[type="checkbox"] + span {
+  padding-left: 8px;
+  margin-right: 30px;
+  font-size: 20px;
+}
+/*<------global styling------->*/
 
 #container {
   position: relative;
@@ -66,8 +124,8 @@ body {
   border-radius: 50%;
   border: none;
   outline: none;
-  background-color: #fb6a6b;
-  color: #fff;
+  background-color: var(--btn-bgColor);
+  color: var(--btn-color);
 }
 
 #openModalBtn:hover {
@@ -91,21 +149,7 @@ body {
   animation: rotation 0.5s linear;
 }
 
-#taskInputSection {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-#taskInputSection p {
-  font-family: "Akaya Kanadaka";
-  font-size: 2em;
-}
-
-#taskInput {
-  display: flex;
-}
+/*<-------global controllers -------->*/
 
 #allTaskController {
   height: 48px;
@@ -115,40 +159,7 @@ body {
   border-bottom: 2px solid #f3f5f7;
 }
 
-#selectAll {
-  height: 18px;
-  width: 18px;
-  cursor: pointer;
-  position: relative;
-  appearance: none;
-  transition-duration: 0.3s;
-  border: 1px solid #fa6667;
-  border-radius: 2px;
-}
-
-#selectAll:checked {
-  background-color: blue;
-}
-
-#selectAll:checked::after {
-  content: "\2713";
-  background-color: #fb6c6d;
-  color: #fff;
-  position: absolute;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-  height: 16px;
-  width: 16px;
-  text-align: center;
-  border: 1px solid #fb6c6d;
-  border-radius: 2px;
-}
-
-#selectAll + span {
-  padding-left: 8px;
-  margin-right: 30px;
-  font-size: 20px;
+#selectAllText {
   color: #ababbd;
 }
 
@@ -156,96 +167,163 @@ body {
   padding: 6px;
   border: none;
   border-radius: 4px;
-  background-color: #fa6667;
-  color: #fff;
+  background-color: var(--btn-bgColor);
+  color: var(--btn-color);
   font-size: 14px;
 }
+/*<-------global controllers -------->*/
 
-/*
- #header {
-  width: 100px;
-  height: 80px;
-  display: inline-block;
-} 
-
-#button {
-    float: right;
-    background-color: #cc2900;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius: 8px;
-    transition-duration: 0.1s;
+/*<-------pending task section -------->*/
+#pendingTaskList {
+  list-style: none;
 }
 
-#button:hover {
-    background-color: #cc2900;
-    color: white;
+#pendingTaskList li {
+  height: 48px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 20px 20px 30px;
+  border-bottom: 2px solid #f3f5f7;
 }
 
-#today {
-        float: right;
-        background-color: #cc2900;
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        border-radius: 8px;
-        transition-duration: 0.4s;
-        cursor: pointer;
-        opacity: 1;
-    }
+.taskDescription {
+  position: relative;
+}
 
-    #today:hover {
-        opacity: 0.2;
-    }
+.taskDescription::after {
+  content: url(/image/edit.svg);
+  position: absolute;
+  top: 7px;
+  right: -16px;
+  display: flex;
+  justify-content: center;
+  height: 12px;
+  width: 12px;
+  align-items: center;
+}
 
-    #GoTo {
-        float: right;
-        background-color: #cc2900;
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        border-radius: 8px;
-        transition-duration: 0.4s;
-        cursor: pointer;
-        opacity: 1;
-    }
+.taskTime {
+  color: #ababbd;
+}
 
-    #GoTo:hover {
+.deleteTask {
+  cursor: pointer;
+}
 
-        opacity: 0.2;
-    }
+/*<-------pending task section -------->*/
 
+/*<-------task input modal-------->*/
+#taskInputContainer {
+  background-color: #fff;
+  position: absolute;
+  top: calc(50vh - 163.4px);
+  left: calc(50vw - 176px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  z-index: 300;
+  opacity: 1;
+  padding: 40px 32px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  box-shadow: 4px 7px 32px 14px #f2f2f2;
+}
 
-    #Create {
-        float: right;
-        background-color: #cc2900;
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        border-radius: 8px;
-        transition-duration: 0.4s;
-        cursor: pointer;
-        opacity: 1;
-    }
+#taskInputHeader {
+  font-family: "Akaya Kanadaka";
+  font-size: 2em;
+  color: #666afb;
+  padding-bottom: 16px;
+}
 
-    #Create:hover {
-        opacity: 0.2;
-    }
-*/
+#taskInputSection {
+  width: 18rem;
+  display: flex;
+  justify-content: flex-start;
+  padding-bottom: 20px;
+}
+
+#taskInput {
+  width: 80%;
+  margin-right: 20px;
+  outline: none;
+  border: none;
+  border-bottom: 2px solid #000000ad;
+  color: #000;
+  font-size: 1.3em;
+}
+
+#taskInput::placeholder {
+  font-size: 1em;
+  color: #b0b0be;
+}
+
+#addBtn {
+  width: 26px;
+  height: 26px;
+  border-radius: 100%;
+  background-color: var(--btn-bgColor);
+  outline: none;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#addBtn img {
+  transform: rotate(360deg);
+}
+
+@keyframes reverseRotation {
+  0% {
+    transform: rotate(360deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+#addBtn:hover img {
+  animation: reverseRotation 0.5s linear;
+}
+
+#taskInfo {
+  line-height: 32px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  column-gap: 6px;
+  width: 17rem;
+  padding-bottom: 20px;
+}
+
+#taskInfo * {
+  height: 100%;
+}
+
+#taskInfo input {
+  border: none;
+  border-bottom: 2px solid #000;
+  color: #000;
+  outline: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.9rem;
+  font-weight: 300;
+}
+
+#createTaskBtn {
+  height: 42px;
+  width: 98%;
+  background-color: var(--btn-bgColor);
+  color: var(--btn-color);
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  font-size: 20px;
+}
+
+/*<-------task input modal-------->*/
